# nmbrs_api

./: .gitignore  .pylintrc  .yamllint  DEPLOYMENT.md  NOTICE  README.md  increase_version.py  pyproject.toml  requirements.txt  set_version.py  setup.py
.github/: README.md
.github/workflows/: Deploy database package pypi.yml  Deploy database package test pypi.yml  Deploy pypi.yml  Deploy soap package pypi.yml  Deploy soap package test pypi.yml  Deploy test pypi.yml  Formatting.yml  Linting.yml  Unit tests.yml  pylint.yml
nmbrs/: __init__.py  __version__.py  api.py
nmbrs/data_classes/company/: company.py  wage_tax.py
nmbrs/data_classes/debtor/: absence_verzuim.py  address.py  bank_account.py  debtor.py  tag.py
nmbrs/data_classes/employee/: employee.py
nmbrs/exceptions/: DefaultLoginFailure.py  InvalidAuthentication.py  InvalidEmailPassword.py  UnauthorizedAccess.py
nmbrs/service/: auth_service.py  company_service.py  debtor_service.py  employee_service.py  sso_service.py
nmbrs/utils/: find_empty_params.py  nmbrs_exception_handler.py  return_list.py
src/: README.md  global_variables.py  nmbrs_soap_api.py
src/nmbrs/: __init__.py  __logging__.py  __version__.py  api.py
src/nmbrs/auth/: token_manager.py
src/nmbrs/data_classes/: company.py  data_class.py  debtor.py  employee.py  general.py  serialize.py
src/nmbrs/exceptions/: DefaultLoginFailure.py  InvalidAuthentication.py  InvalidDomain.py  InvalidEmailPassword.py  MissingParams.py  MultipleEnvironments.py  UnauthorizedAccess.py  UnauthorizedAccessError.py  __init__.py  custom_exceptions.py  exceptions.py  nmbrs_exceptions.py  sso_exceptions.py
src/nmbrs/service/: __init__.py  (+7 more)
src/nmbrs_database/: README.md  __init__.py  __version__.py  databases.py  requirements.txt
src/nmbrs_soap/: __init__.py  api.py  requirements.txt
tests/: README.md  __init__.py
tests/test_nmbrs/: README.md  __init__.py  test_api.py  test_api_lazy_initialization.py
(+225 files in other folders)
