[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmbrs_soap_api"
version = "0.0.207"
authors = [
  { name="Lars Kluijtmans", email="info@lk-software.com" },
]
maintainers = [
  { name="Lars Kluijtmans", email="info@lk-software.com" },
]
description = "Python SDK for the Visma Nmbrs SOAP API."
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["nmbrs", "soap"]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "xmltodict",
    "zeep"
]

[project.urls]
Homepage = "https://github.com/LarsKluijtmans/Visma-NMBRS-SOAP-API-SDK"
Issues = "https://github.com/LarsKluijtmans/Visma-NMBRS-SOAP-API-SDK/issues"

[tool.hatch.build.targets.wheel]
packages = ["nmbrs"]
